// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentSettingsReducer Adds new object properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "cellSizeDistribution": Object {
      "filterSettings": Object {
        "binStep": 200,
        "minCellSize": 10800,
      },
    },
    "classifier": Object {
      "filterSettings": Object {
        "bandwidth": -1,
        "minProbability": 0.82,
      },
    },
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
        "newProperty": Object {
          "name": "a",
          "value": "b",
        },
      },
    },
    "dataIntegration": Object {
      "dataIntegration": Object {
        "method": "seuratv4",
        "methodSettings": Object {
          "seuratv4": Object {
            "normalisation": "logNormalise",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": Object {
        "excludeGeneCategories": Array [],
        "method": "rpca",
        "numPCs": 30,
      },
    },
    "doubletScores": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "probabilityThreshold": 0.2,
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": Object {
      "filterSettings": Object {
        "method": "absolute_threshold",
        "methodSettings": Object {
          "absolute_threshold": Object {
            "binStep": 200,
            "maxFraction": 0.1,
          },
        },
      },
    },
    "numGenesVsNumUmis": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "lowerCutoff": 2.1,
        "regressionType": "gam",
        "smoothing": 13,
        "stringency": 2.1,
        "upperCutoff": 4.8,
      },
    },
    "test": "test data",
  },
}
`;

exports[`experimentSettingsReducer Adds new value properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "cellSizeDistribution": Object {
      "filterSettings": Object {
        "binStep": 200,
        "minCellSize": 10800,
      },
    },
    "classifier": Object {
      "filterSettings": Object {
        "bandwidth": -1,
        "minProbability": 0.82,
      },
    },
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
        "newProperty": "property",
      },
    },
    "dataIntegration": Object {
      "dataIntegration": Object {
        "method": "seuratv4",
        "methodSettings": Object {
          "seuratv4": Object {
            "normalisation": "logNormalise",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": Object {
        "excludeGeneCategories": Array [],
        "method": "rpca",
        "numPCs": 30,
      },
    },
    "doubletScores": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "probabilityThreshold": 0.2,
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": Object {
      "filterSettings": Object {
        "method": "absolute_threshold",
        "methodSettings": Object {
          "absolute_threshold": Object {
            "binStep": 200,
            "maxFraction": 0.1,
          },
        },
      },
    },
    "numGenesVsNumUmis": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "lowerCutoff": 2.1,
        "regressionType": "gam",
        "smoothing": 13,
        "stringency": 2.1,
        "upperCutoff": 4.8,
      },
    },
    "test": "test data",
  },
}
`;

exports[`experimentSettingsReducer Updates existing value properly 1`] = `
Object {
  "pipelineStatus": Object {
    "error": false,
    "loading": false,
    "status": Object {},
  },
  "processing": Object {
    "cellSizeDistribution": Object {
      "filterSettings": Object {
        "binStep": 200,
        "minCellSize": 10800,
      },
    },
    "classifier": Object {
      "filterSettings": Object {
        "bandwidth": -1,
        "minProbability": 0.82,
      },
    },
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
    },
    "dataIntegration": Object {
      "dataIntegration": Object {
        "method": "seuratv4",
        "methodSettings": Object {
          "seuratv4": Object {
            "normalisation": "logNormalise",
            "numGenes": 2000,
          },
        },
      },
      "dimensionalityReduction": Object {
        "excludeGeneCategories": Array [],
        "method": "rpca",
        "numPCs": 30,
      },
    },
    "doubletScores": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "probabilityThreshold": 0.2,
      },
    },
    "meta": Object {
      "completingStepError": false,
      "loading": true,
      "loadingSettingsError": false,
    },
    "mitochondrialContent": Object {
      "filterSettings": Object {
        "method": "absolute_threshold",
        "methodSettings": Object {
          "absolute_threshold": Object {
            "binStep": 200,
            "maxFraction": 0.1,
          },
        },
      },
    },
    "numGenesVsNumUmis": Object {
      "filterSettings": Object {
        "binStep": 0.05,
        "lowerCutoff": 2.1,
        "regressionType": "gam",
        "smoothing": 13,
        "stringency": 2.1,
        "upperCutoff": 4.8,
      },
    },
    "test": "test data",
  },
}
`;
